--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -13,7 +13,19 @@
 <body class="bg-color">
     <div >
         <h1 id="title" class="heading">DOM Learning with wasif</h1>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
+        <input type="password" name="" id="">
+
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
